kubernetes/apps/base/arr-stack/prowlarr/ingress.yaml
# Prowlarr Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: arr-stack
  labels:
    app.kubernetes.io/name: prowlarr
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - prowlarr.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: prowlarr.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 80
